# seekdb-client

./: .gitignore  CMakeLists.txt  README.md
examples/: create_insert_select.c  hello.c
include/: seekdb.h
src/: port.h  port_posix.c  port_win32.c  seekdb.c  seekdb.cc  seekdb_internal.h
tests/: run_two_concurrent_clients.sh  test_first_open.cc  test_kill_client.cc  test_one_client_process.cc  test_spawn_race.c  test_spawn_race.cc  test_two_clients_open.cc  test_two_clients_processes.cc  test_two_clients_threads.cc  test_utils.h
tools/: seekdb_cli.c
